--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
     "@neondatabase/serverless": "^0.9.1",
+    "@uploadthing/react": "^6.5.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.8",
     "next": "14.2.2",
@@ -20,7 +21,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
-    "uuid": "^9.0.1"
+    "uploadthing": "^6.10.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@types/node": "^20",
