--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-toastify": "^10.0.5",
     "uploadthing": "^6.10.0",
     "uuid": "^9.0.1",
     "zod": "^3.23.4"
