--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
+    "@google/generative-ai": "^0.8.0",
     "@neondatabase/serverless": "^0.9.1",
     "@uploadthing/react": "^6.5.0",
     "dotenv": "^16.4.5",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-toastify": "^10.0.5",
+    "server-only": "^0.0.1",
     "uploadthing": "^6.10.0",
     "uuid": "^9.0.1",
     "zod": "^3.23.4"
