--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^5.0.1",
     "@google/generative-ai": "^0.8.0",
     "@neondatabase/serverless": "^0.9.1",
+    "@next/env": "^14.2.3",
     "@uploadthing/react": "^6.5.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.8",
