--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-toastify": "^10.0.5",
     "server-only": "^0.0.1",
     "uploadthing": "^6.10.0",
+    "use-debounce": "^10.0.0",
     "uuid": "^9.0.1",
     "zod": "^3.23.4"
   },
